--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,23 @@ build_unflags = -std=gnu++11
 build_flags = 
 	-std=gnu++14
 
+
+
 monitor_filters =
   default   ; Remove typical terminal control codes from input
   colorize
 
+
+; debugging with ESP Prog
+;upload_port= COM18; Inserted manually. Info got from Pio Devices
 debug_tool = esp-prog
 debug_init_break = tbreak setup
+;debug_port= COM6; Found automatically by PIO
+
+
+; firmware uploading with ESP-PROG
+; upload_protocol = esp-prog
+debug_speed = 500
+
+; upload_protocol = esp-prog ; NEEDED
+
