--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = espidf
 monitor_speed = 115200
+
 build_unflags = -std=gnu++11
 build_flags = 
 	-std=gnu++14
@@ -24,16 +25,9 @@ monitor_filters =
   colorize
 
 
-; debugging with ESP Prog
-;upload_port= COM18; Inserted manually. Info got from Pio Devices
+; upload_port = COM6
+
+; debugging with ESP 
+; upload_port = COM6; Inserted manually. Info got from Pio Devices
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-;debug_port= COM6; Found automatically by PIO
-
-
-; firmware uploading with ESP-PROG
-; upload_protocol = esp-prog
-debug_speed = 500
-
-; upload_protocol = esp-prog ; NEEDED
-
