--- a/platformio.ini
+++ b/platformio.ini
@@ -26,8 +26,8 @@ monitor_filters =
 
 
 ; upload_port = COM6
-
+; Debug geht nicht, weil HSPI die Port 12-15 verwendet
 ; debugging with ESP 
 ; upload_port = COM6; Inserted manually. Info got from Pio Devices
-debug_tool = esp-prog
-debug_init_break = tbreak setup
+; debug_tool = esp-prog
+; debug_init_break = tbreak setup
