--- a/platformio.ini
+++ b/platformio.ini
@@ -28,5 +28,6 @@ monitor_filters =
 ; upload_port = COM6
 ; debugging with ESP 
 ; upload_port = COM6; Inserted manually. Info got from Pio Devices
-; debug_tool = esp-prog
-; debug_init_break = tbreak setup
+debug_tool = esp-prog
+debug_init_break = tbreak setup
+; upload_speed = 9600
