--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,8 @@
         "future": "cpp",
         "mutex": "cpp",
         "thread": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "iostream": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
