"ADJUST", "PARAMETER" first String

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,8 +24,8 @@ upload_port = COM6
 
 build_unflags = -std=gnu++11
 build_flags = 
-	-std=gnu++14
-
+	-std=gnu++17
+; war gnu++14
 
 ; debugging with ESP 
 debug_tool = esp-prog
