--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,5 @@
         "*.ipp": "cpp",
         "iostream": "cpp"
     },
-    "C_Cpp.errorSquiggles": "Disabled",
-    "C_Cpp.default.cppStandard": ""
+    "C_Cpp.errorSquiggles": "Disabled"
 }
