--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-.pio
+.pio/build/esp32dev/*
+!.pio/build/esp32dev/firmware.bin
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
 doxygen
+.pio/build/project.checksum
