--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = espidf
 
 ; Serial Monitor options
 ;monitor_port = COM6
-;monitor_speed = 115200
+monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 
 ; Upload
