--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .pio/build/esp32dev/*
-!.pio/build/esp32dev/firmware.bin
+.pio/build/esp32dev/firmware.bin
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
@@ -7,4 +7,3 @@
 doxygen
 .pio/build/project.checksum
 .pio/build/
-firmware.bin
