--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ monitor_filters = esp32_exception_decoder
 ; debugging with ESP 
 debug_tool = esp-prog
 debug_init_break = tbreak setup
+
+; Suppress Bootloader messages
+build_flags = -D CONFIG_BOOTLOADER_LOG_LEVEL_NONE
+
+
