--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,10 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
@@ -5,15 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = espidf
-
-; Serial Monitor options
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
-
-; debugging with ESP 
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-
-
-
-
