--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,12 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 debug_tool = esp-prog
 debug_init_break = tbreak setup
+board_build.partitions = partitions.csv
+build_type = release
+build_flags =
+  -Os
+  -ffunction-sections
+  -fdata-sections
+  -Wl,--gc-sections
+build_unflags = -g3
 
